--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,10 @@
         </a>
         {% if current_user.is_authenticated %}
         <div class="nav-icons">
+            <a class="nav-link" href="{{ url_for('notifications') }}">
+                <i class="fas fa-cog"></i>
+                <span class="small">Config. Notif.</span>
+            </a>
             <div class="nav-link" data-bs-toggle="modal" data-bs-target="#notificationsModal" style="cursor: pointer;">
                 <i class="fas fa-bell"></i>
                 <span class="badge bg-danger" id="notificationBadge" style="display: none;">0</span>
