--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid statistics-container py-4">
+<div class="container-fluid statistics-container py-4 mb-5">
     <!-- Encabezado de Estadísticas -->
     <div class="statistics-header">
         <h2>Estadísticas</h2>
