--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -138,6 +138,8 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 <!-- Chart.js Library (si es necesario) -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<!-- Socket.IO -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
 <!-- JavaScript de Notificaciones -->
 <script src="{{ url_for('static', filename='js/notifications.js') }}"></script>
 {% endblock %}
