--- a/templates/statistics.html
+++ b/templates/statistics.html
@@ -63,8 +63,13 @@
                 <div class="card-header">
                     <h5>Tipos de Incidentes</h5>
                 </div>
-                <div id="incidentTypesList" class="scrollable-list">
-                    <!-- Lista de tipos de incidentes -->
+                <div class="chart-container">
+                    <canvas id="incidentTypesChart"></canvas>
+                </div>
+                <div class="scroll-container">
+                    <div id="incidentTypesList" class="scrollable-list">
+                        <!-- Lista de tipos de incidentes -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -73,8 +78,13 @@
                 <div class="card-header">
                     <h5>Estaciones más Afectadas</h5>
                 </div>
-                <div id="stationsList" class="scrollable-list">
-                    <!-- Lista de estaciones más afectadas -->
+                <div class="chart-container">
+                    <canvas id="stationsChart"></canvas>
+                </div>
+                <div class="scroll-container">
+                    <div id="stationsList" class="scrollable-list">
+                        <!-- Lista de estaciones más afectadas -->
+                    </div>
                 </div>
             </div>
         </div>
