--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -36,7 +36,7 @@
 
 /* Color de fondo general */
 body {
-    background-color: #fffe99 !important;
+    background-color: #e6e589 !important;
 }
 
 /* Colores para contenedores y tarjetas */
@@ -49,7 +49,7 @@ body {
 .stat-card,
 .notification-item,
 .floating-alert {
-    background-color: #ff689c !important;
+    background-color: #e65c8a !important;
 }
 
 .form-check {
